--- a/zCulturedStart.csproj
+++ b/zCulturedStart.csproj
@@ -34,6 +34,10 @@
     <Reference Include="0Harmony">
       <HintPath>D:\SteamLibrary\steamapps\common\Mount &amp; Blade II Bannerlord\Modules\MNBAltStart\bin\Win64_Shipping_Client\0Harmony.dll</HintPath>
     </Reference>
+    <Reference Include="FreePlay">
+      <HintPath>D:\SteamLibrary\steamapps\common\Mount &amp; Blade II Bannerlord\Modules\FreePlay\bin\Win64_Shipping_Client\FreePlay.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="StoryMode">
       <HintPath>D:\SteamLibrary\steamapps\common\Mount &amp; Blade II Bannerlord\Modules\StoryMode\bin\Win64_Shipping_Client\StoryMode.dll</HintPath>
       <Private>False</Private>
@@ -209,14 +213,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CSApplyChoices.cs" />
-    <Compile Include="CSCharCreationPatch.cs" />
+    <Compile Include="Patches\CSBehaviourPatch.cs" />
+    <Compile Include="Patches\CSPatchAddMenus.cs" />
     <Compile Include="CSCharCreationOption.cs" />
     <Compile Include="CSCharContent.cs" />
-    <Compile Include="CSEscapePatch.cs" />
-    <Compile Include="CSTalkWithNoblePatch.cs" />
+    <Compile Include="Patches\CSPatchDisableTutorial.cs" />
+    <Compile Include="Patches\CSEscapePatch.cs" />
+    <Compile Include="CSQuestBehaviour.cs" />
+    <Compile Include="Patches\CSPatchSetTextVariables.cs" />
+    <Compile Include="Patches\CSPatchTalkWithNoble.cs" />
     <Compile Include="CulturedStartInit.cs" />
     <Compile Include="CulturedStartLocation.cs" />
-    <Compile Include="CSPatchApplyCulture.cs" />
+    <Compile Include="Patches\CSPatchApplyCulture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
