--- a/zCulturedStart.csproj
+++ b/zCulturedStart.csproj
@@ -220,6 +220,7 @@
     <Compile Include="Patches\CSPatchDisableTutorial.cs" />
     <Compile Include="Patches\CSEscapePatch.cs" />
     <Compile Include="CSQuestBehaviour.cs" />
+    <Compile Include="Patches\CSPatchOnLordPartySpawned.cs" />
     <Compile Include="Patches\CSPatchSetTextVariables.cs" />
     <Compile Include="Patches\CSPatchTalkWithNoble.cs" />
     <Compile Include="CulturedStartInit.cs" />
