Changing how Nerezet's Folly complete to just auto complete rather than dumb hack Change looter crime rating to 50. Add patch to color creator to allow for player kingdoms to change banner.

--- a/zCulturedStart.csproj
+++ b/zCulturedStart.csproj
@@ -213,6 +213,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CSApplyChoices.cs" />
+    <Compile Include="Patches\CSPatchColorCreator.cs" />
     <Compile Include="Patches\CSBehaviourPatch.cs" />
     <Compile Include="Patches\CSPatchAddMenus.cs" />
     <Compile Include="CSCharCreationOption.cs" />
