--- a/zCulturedStart.csproj
+++ b/zCulturedStart.csproj
@@ -166,6 +166,10 @@
       <HintPath>D:\SteamLibrary\steamapps\common\Mount &amp; Blade II Bannerlord\bin\Win64_Shipping_Client\TaleWorlds.Network.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="TaleWorlds.ObjectSystem">
+      <HintPath>D:\SteamLibrary\steamapps\common\Mount &amp; Blade II Bannerlord\bin\Win64_Shipping_Client\TaleWorlds.ObjectSystem.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="TaleWorlds.PlatformService">
       <HintPath>D:\SteamLibrary\steamapps\common\Mount &amp; Blade II Bannerlord\bin\Win64_Shipping_Client\TaleWorlds.PlatformService.dll</HintPath>
       <Private>False</Private>
@@ -209,9 +213,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CSApplyChoices.cs" />
-    <Compile Include="CSScreenData.cs" />
-    <Compile Include="CSSkillScreen.cs" />
-    <Compile Include="CSSkillScreenViewModel.cs" />
+    <Compile Include="SkillScreen\CSScreenData.cs" />
+    <Compile Include="SkillScreen\CSSkillScreen.cs" />
+    <Compile Include="SkillScreen\CSSkillScreenVM.cs" />
+    <Compile Include="SkillScreen\CSSkillVM.cs" />
     <Compile Include="Patches\CSFreePlayPatch.cs" />
     <Compile Include="Patches\CSPatchColorCreator.cs" />
     <Compile Include="Patches\CSBehaviourPatch.cs" />
