--- a/zCulturedStart.csproj
+++ b/zCulturedStart.csproj
@@ -213,6 +213,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CSApplyChoices.cs" />
+    <Compile Include="Patches\CSPatchBannerVMDone.cs" />
     <Compile Include="SkillScreen\CSScreenData.cs" />
     <Compile Include="SkillScreen\CSSkillScreen.cs" />
     <Compile Include="SkillScreen\CSSkillScreenVM.cs" />
